--- a/.github/workflows/daily_reminder.yml
+++ b/.github/workflows/daily_reminder.yml
@@ -57,7 +57,7 @@ jobs:
                 },
                 {
                   "tag": "markdown",
-                  "content": "请各位大佬务必：\n1. 打开 App\n2. 联网停留 2-3 分钟\n3. 随便点两下\n\n感激不尽！ 🙏\n\n（提醒）"
+                  "content": "请各位大佬务必：\n1. 打开 App\n2. 联网停留 2-3 分钟\n3. 随便点两下\n4. 打开链接，填写打卡结果：https://ver133tlfd.feishu.cn/wiki/BAzWwVQcriPnaskup7VchRkwnfc\n\n（提醒）"
                 }
               ]
             }
